# carnaval-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
examples/: deep_learning.rs
src/: lib.rs
src/activation/: mod.rs
src/layer/: conv2d.rs  dense.rs  flatten.rs  hidden_layer.rs  input_layer.rs  maxpool2d.rs  mod.rs  util.rs
src/model/: dense.rs  fully_connected.rs  mod.rs  sequential.rs
src/nn/: conv.rs  fully_connected.rs  mod.rs
