[package]
name = "carnaval-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"

[dev-dependencies]
more-asserts = "0.3.1"
plotpy = "0.5.1"

